Get and Add Products

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "api": "node ./src/api/app.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
